--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:exported="true">
         </activity>
         <activity
-            android:name=".IngresoMateriaActivity"
+            android:name=".Administrador.IngresoMateriaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
