--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,31 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false">
         </activity>
         <activity
             android:name=".Administrador.IngresoMateriaActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".Administrador.ListaMateria"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Administrador.ActualizarMateria"
+            android:exported="false"/>
+        <activity
+            android:name=".Administrador.ListaTermino"
+            android:exported="false"/>
+        <activity
+            android:name=".Administrador.IngresoTerminoActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".Administrador.ActualizarTermino"
+            android:exported="false"/>
     </application>
-
 </manifest>
