--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:exported="false"/>
         <activity
             android:name=".Administrador.ListaMateria"
-            android:exported="false"/>
+            android:exported="false">
+        </activity>
         <activity
             android:name=".Administrador.ActualizarMateria"
             android:exported="false" />
@@ -46,7 +47,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-
+            </intent-filter>
         </activity>
     </application>
 
